--- a/src/component/cardDescription.css
+++ b/src/component/cardDescription.css
@@ -4,5 +4,35 @@
 .description button{
     outline: none;
     color: gray;
+    margin-left:-8px;
+    font-size: 15px;
+    
 
+}
+.description{
+    margin-left: 20px;
+}
+
+.likes{
+    margin-bottom: 10px; 
+}
+.caption{
+margin-top: 10px;
+}
+.commentTime{
+    font-size: small;
+}
+.name{
+    font-weight: bold;
+}
+
+.description .firstComments{
+    width: 100vw;
+    display: flex;
+    justify-content: space-between;
+
+}
+.description i{
+    font-size: small;
+    color:grey;
 }
