--- a/src/component/cardLogos.css
+++ b/src/component/cardLogos.css
@@ -3,7 +3,10 @@
 	justify-content: space-between;
 	margin: 10px 20px;
 }
-.far {
+.hide{
+	display: none;
+}
+.far,.fas{
 	margin-right: 20px;
 }
 .fa-heart {
@@ -44,4 +47,7 @@
 	background-color: gray;
 	border-radius: 10px;
 	margin-left: 5px;
+}
+#heart{
+	color: red;
 }
